# xenxen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  error.md
.github/workflows/: ci.yml
src/: balance.rs  config.rs  db.rs  main.rs  tui.rs
